--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Layout</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css">
 </head>
 
 <body class="bg-gray-100">
@@ -14,16 +16,17 @@
         <div class="bg-blue-800 text-white w-full md:w-1/4 p-4">
             <h2 class="text-2xl font-bold mb-4">Sidebar</h2>
             <ul>
-                <li class="mb-2"><a href="#" class="hover:underline">Calendar</a></li>
-                <li class="mb-2"><a href="#" class="hover:underline">Objects</a></li>
-                <li class="mb-2"><a href="#" class="hover:underline">My account</a></li>
-                <li class="mb-2"><a href="#" class="hover:underline">Logout</a></li>
+                <li class="mb-2"><a href="#" class="hover:underline"><i class="bi bi-calendar"></i> Calendar</a></li>
+                <li class="mb-2"><a href="#" class="hover:underline"><i class="bi bi-box"></i> Objects</a></li>
+                <li class="mb-2"><a href="#" class="hover:underline"><i class="bi bi-person"></i> My account</a></li>
+                <li class="mb-2"><a href="#" class="hover:underline"><i class="bi bi-box-arrow-right"></i> Logout</a>
+                </li>
             </ul>
         </div>
         <!-- Main Content -->
         <div class="flex-1 p-4">
             <header class="flex justify-between items-center mb-4">
-                <h1 class="text-3xl font-bold">Logo</h1>
+                <h1 class="text-3xl font-bold"><i class="bi bi-bootstrap"></i> Logo</h1>
                 <input type="text" placeholder="Search..." class="border p-2 rounded">
             </header>
             <div class="bg-white p-4 rounded shadow">
