Made the search bar responsive

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="flex-1 p-4">
             <header class="flex justify-between items-center mb-4">
                 <h1 class="text-3xl font-bold"><i class="bi bi-bootstrap"></i> Logo</h1>
-                <input type="text" placeholder="Search..." class="border p-2 rounded">
+                <input type="text" placeholder="Search..." class="border p-2 rounded w-full md:w-auto">
             </header>
             <div class="bg-white p-4 rounded shadow">
                 <h2 class="text-xl font-bold mb-2">October 2021</h2>
