Made the title more responsive

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         </div>
         <!-- Main Content -->
         <div class="flex-1 p-4">
-            <header class="flex justify-between items-center mb-4">
-                <h1 class="text-3xl font-bold"><i class="bi bi-bootstrap"></i> Logo</h1>
+            <header class="flex flex-col md:flex-row justify-between items-center mb-4">
+                <h1 class="text-3xl font-bold mb-4 md:mb-0"><i class="bi bi-bootstrap"></i> Logo</h1>
                 <input type="text" placeholder="Search..." class="border p-2 rounded w-full md:w-auto">
             </header>
             <div class="bg-white p-4 rounded shadow">
