--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
 <body class="bg-gray-100">
     <div class="flex flex-col md:flex-row">
         <!-- Sidebar -->
-        <div class="bg-blue-800 text-white w-full md:w-1/4 p-4">
-            <h2 class="text-2xl font-bold mb-4">Sidebar</h2>
-            <ul>
-                <li class="mb-2"><a href="#" class="hover:underline"><i class="bi bi-calendar"></i> Calendar</a></li>
-                <li class="mb-2"><a href="#" class="hover:underline"><i class="bi bi-box"></i> Objects</a></li>
-                <li class="mb-2"><a href="#" class="hover:underline"><i class="bi bi-person"></i> My account</a></li>
-                <li class="mb-2"><a href="#" class="hover:underline"><i class="bi bi-box-arrow-right"></i> Logout</a>
+        <div class="bg-blue-800 text-white w-full md:w-1/4 p-4 flex flex-col md:flex-row md:items-center">
+            <h2 class="text-2xl font-bold mb-4 md:mb-0 md:mr-4">Sidebar</h2>
+            <ul class="flex flex-col md:flex-row md:space-x-4">
+                <li class="mb-2 md:mb-0"><a href="#" class="hover:underline"><i class="bi bi-calendar"></i> Calendar</a>
                 </li>
+                <li class="mb-2 md:mb-0"><a href="#" class="hover:underline"><i class="bi bi-box"></i> Objects</a></li>
+                <li class="mb-2 md:mb-0"><a href="#" class="hover:underline"><i class="bi bi-person"></i> My account</a>
+                </li>
+                <li class="mb-2 md:mb-0"><a href="#" class="hover:underline"><i class="bi bi-box-arrow-right"></i>
+                        Logout</a></li>
             </ul>
         </div>
         <!-- Main Content -->
